--- a/web/package.json
+++ b/web/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@shopify/shopify-app-express": "^2.1.3",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.3",
+    "body-parser": "^1.20.2",
+    "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
-    "serve-static": "^1.14.1",
     "dotenv": "^16.4.1",
     "log4js": "^6.9.1",
     "mongodb": "^6.2.0",
-    "body-parser": "^1.20.2",
+    "serve-static": "^1.14.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
