--- a/shopify.app.remix-app.toml
+++ b/shopify.app.remix-app.toml
@@ -3,12 +3,13 @@
 client_id = "48c11f190fe107153899a7f870f79215"
 name = "remix-app"
 handle = "remix-app-139"
-application_url = "https://doll-survivor-inches-trailers.trycloudflare.com"
+application_url = "https://cialis-distant-homeless-matter.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "test-development-fc-app.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
@@ -16,9 +17,9 @@ scopes = "read_checkouts,read_orders,read_products,read_shipping,unauthenticated
 
 [auth]
 redirect_urls = [
-  "https://doll-survivor-inches-trailers.trycloudflare.com/auth/callback",
-  "https://doll-survivor-inches-trailers.trycloudflare.com/auth/shopify/callback",
-  "https://doll-survivor-inches-trailers.trycloudflare.com/api/auth/callback"
+  "https://cialis-distant-homeless-matter.trycloudflare.com/auth/callback",
+  "https://cialis-distant-homeless-matter.trycloudflare.com/auth/shopify/callback",
+  "https://cialis-distant-homeless-matter.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
