--- a/shopify.app.fast-courier.toml
+++ b/shopify.app.fast-courier.toml
@@ -9,10 +9,11 @@ embedded = true
 [build]
 automatically_update_urls_on_dev = true
 dev_store_url = "staging-fc.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "read_all_orders,read_checkouts,read_orders,read_products,read_shipping,unauthenticated_read_checkouts,unauthenticated_write_checkouts,write_checkouts,write_orders,write_products,write_shipping"
+scopes = "read_checkouts,read_orders,read_products,read_shipping,unauthenticated_read_checkouts,unauthenticated_write_checkouts,write_checkouts,write_orders,write_products,write_shipping"
 
 [auth]
 redirect_urls = [
