--- a/.env.remix-app
+++ b/.env.remix-app
@@ -1,2 +1,3 @@
 SHOPIFY_API_KEY=fba0237f7f8084edf2aa919f82b4a68d
 SHOPIFY_CHECKOUT_UI_ID=3be4fb0d-3d1f-4902-b766-73a40c2d669f
+SHOPIFY_THANKYOU_PAGE_ID=9da5d71c-2e41-4d1d-b433-164168b01cc1
