--- a/shopify.app.remix-app.toml
+++ b/shopify.app.remix-app.toml
@@ -1,15 +1,14 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "fba0237f7f8084edf2aa919f82b4a68d"
+client_id = "48c11f190fe107153899a7f870f79215"
 name = "remix-app"
 handle = "remix-app-139"
-application_url = "https://convenient-aa-eyes-sports.trycloudflare.com"
+application_url = "https://looks-toyota-heat-simple.trycloudflare.com"
 embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-dev_store_url = "fc54-staging.myshopify.com"
-include_config_on_deploy = true
+dev_store_url = "test-development-fc-app.myshopify.com"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
@@ -17,9 +16,9 @@ scopes = "read_checkouts,read_orders,read_products,read_shipping,unauthenticated
 
 [auth]
 redirect_urls = [
-  "https://convenient-aa-eyes-sports.trycloudflare.com/auth/callback",
-  "https://convenient-aa-eyes-sports.trycloudflare.com/auth/shopify/callback",
-  "https://convenient-aa-eyes-sports.trycloudflare.com/api/auth/callback"
+  "https://looks-toyota-heat-simple.trycloudflare.com/auth/callback",
+  "https://looks-toyota-heat-simple.trycloudflare.com/auth/shopify/callback",
+  "https://looks-toyota-heat-simple.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
