--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@shopify/shopify-app-express": "^2.1.3",
     "@shopify/shopify-app-session-storage-sqlite": "^1.2.3",
+    "binpackingjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "bottleneck": "^2.19.5",
     "compression": "^1.7.4",
