--- a/web/.env
+++ b/web/.env
@@ -1,6 +1,6 @@
-SHOPIFY_API_KEY=48c11f190fe107153899a7f870f79215
-SHOPIFY_API_SECRET=76340c674fc34252622a40c916af1d2c
+SHOPIFY_API_KEY=fba0237f7f8084edf2aa919f82b4a68d
+SHOPIFY_API_SECRET=462d2444640fd4e35b1250a085c7392e
 SCOPES=read_checkouts,read_orders,read_products,read_shipping,unauthenticated_read_checkouts,unauthenticated_write_checkouts,write_checkouts,write_orders,write_products,write_shipping
-HOST=https://syracuse-embassy-tagged-amazing.trycloudflare.com
+HOST=https://fc-app.vuwork.com
  
 PORT=8081
