--- a/shopify.app.remix-app.toml
+++ b/shopify.app.remix-app.toml
@@ -1,9 +1,9 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "fba0237f7f8084edf2aa919f82b4a68d"
+client_id = "48c11f190fe107153899a7f870f79215"
 name = "remix-app"
 handle = "remix-app-139"
-application_url = "https://fc-app.vuwork.com"
+application_url = "https://possibilities-dave-cam-marvel.trycloudflare.com"
 embedded = true
 
 [build]
@@ -17,9 +17,9 @@ scopes = "read_checkouts,read_orders,read_products,read_shipping,unauthenticated
 
 [auth]
 redirect_urls = [
-  "https://fc-app.vuwork.com/auth/callback",
-  "https://fc-app.vuwork.com/auth/shopify/callback",
-  "https://fc-app.vuwork.com/api/auth/callback"
+  "https://possibilities-dave-cam-marvel.trycloudflare.com/auth/callback",
+  "https://possibilities-dave-cam-marvel.trycloudflare.com/auth/shopify/callback",
+  "https://possibilities-dave-cam-marvel.trycloudflare.com/api/auth/callback"
 ]
 
 [webhooks]
