--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -41,6 +41,7 @@
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "react-select": "^5.8.0",
+    "react-toastify": "^8.2.0",
     "vite": "^4.3.9"
   },
   "devDependencies": {
