--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -30,11 +30,13 @@
     "@shopify/polaris": "^10.49.1",
     "@vitejs/plugin-react": "1.2.0",
     "axios": "^1.6.0",
+    "bootstrap": "^5.3.3",
     "csvtojson": "^2.0.10",
     "i18next": "^23.1.0",
     "i18next-resources-to-backend": "^1.1.4",
     "papaparse": "^5.4.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^13.0.0",
     "react-loader-spinner": "^5.4.5",
