--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -44,7 +44,8 @@
     "react-router-dom": "^6.3.0",
     "react-select": "^5.8.0",
     "react-toastify": "^8.2.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "@shopify/stylelint-polaris": "^12.0.0",
