--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SHOPIFY_API_KEY=fba0237f7f8084edf2aa919f82b4a68d
 SHOPIFY_API_SECRET=462d2444640fd4e35b1250a085c7392e
 SCOPES=read_checkouts,read_orders,read_products,read_shipping,unauthenticated_read_checkouts,unauthenticated_write_checkouts,write_checkouts,write_orders,write_products,write_shipping
-HOST=https://shop.fastcourier.com.au
+HOST=https://enhanced-atmospheric-wireless-awful.trycloudflare.com
 PORT=8081
